# github-user-profile

./: Cargo.toml  README.md
docs/design/: gh-profile-gen-prd.md  gh-profile-gen-tasks-stage6.md  prompt.md
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  profile.rs  toml_io.rs
src/render/: markdown.rs  mod.rs  sections.rs  templates.rs
src/services/: urls.rs
src/ui/: app.rs  mod.rs  theme.rs  widgets.rs  wizard.rs
tests/: cli_integration.rs
tests/fixtures/: full.toml  minimal.toml
