[package]
name = "gh-profile-gen"
version = "0.1.0"
edition = "2024"
description = "Generate comprehensive GitHub profile README.md files"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
termimad = "0.30"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
panic = "abort"
strip = true
